--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,12 @@
-<h1>Sample App</h1>
-<p>This is the home page for the <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> sample application</p>
+<% provide(:title, 'Home') %>
+<div class="center hero-unit">
+	<h1>Welcome to the Solved IT!</h1>
+
+	<h2>
+		This is the home page for the <a href="http://www.solvedit.be/">Solved IT</A> sample application.
+	</h2>
+
+	<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Solved IT"), 'http://www.solvedit.be/' %>
